WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306473
REGRESSION (
288409@main
) - tv.apple.com: Unexpected to see sign-in prompt using the forward button
https://bugs.webkit.org/show_bug.cgi?id=306473
Summary
REGRESSION (288409@main) - tv.apple.com: Unexpected to see sign-in prompt usi...
Charlie Wolfe
Reported
2026-01-28 14:26:08 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2026-01-28 14:26:09 PST
<
rdar://problem/151991688
>
Charlie Wolfe
Comment 2
2026-01-28 14:28:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57437
EWS
Comment 3
2026-01-29 01:38:31 PST
Committed
306405@main
(9d6ff39de1fb): <
https://commits.webkit.org/306405@main
> Reviewed commits have been landed. Closing PR #57437 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug